testsuite/gnat2goto/tests/pointer_to_slice/test.opt
ALL XFAIL CBMC fails with Invariant violation - Postcondition

